# adventofcode22

./: adventofcode.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
input/: supply_stacks.txt  supply_stacks_exp.txt
src/: CalourieCounting.hs  D01_CalourieCounting.hs  D02_RockPaperScissors.hs  D03_RucksackReorg.hs  D04_CampCleanup.hs  D05_SupplyStacks.hs  D06_TuningTrouble.hs  D07_NoSpaceLeft.hs  D08_TreeHouse.hs
