cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

executable adventofcode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: D01_CalourieCounting
                   D02_RockPaperScissors
                   D03_RucksackReorg
                   D04_CampCleanup
                   D05_SupplyStacks

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TemplateHaskell
    build-depends:    base -any, QuickCheck -any, random -any, split -any, text -any, containers -any
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-uni-patterns -Wno-type-defaults -Wno-unused-imports -Wno-unused-matches
